--- a/ind.html
+++ b/ind.html
@@ -11,99 +11,113 @@
   <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <p id ="special">Comparisons!</p>
+        <hr>
         <br>
         <br>
-        <ol id="case_evaluation">
+        <ul id="case_evaluation">
         <li>
             <b>Test Image- </b>
             <img src="Airpod_case.jpg" height="350"  alt="">
         </li>
         <p>
             Output on Google Lens - 
-            <span></span>
+            <span>Airpods</span>
         </p>   
         <p>Output on Mobilenet Model - 
-            <span></span>
+            <span>Printer</span>
         </p>
-        
-        </ol> 
+        <br><br>
+        <p>Google Lens wins!</p>
+        </ul> 
         <br>
         <br>
-    <ol id="book_evaluation">
+    <ul id="book_evaluation">
         <li>
             <b>Test Image- </b>
             <img src="Book.jpg" height="350"  alt="">
         </li>
         <p>
             Output on Google Lens - 
-            <span></span>
+            <span>The Lion Above The Door (or book)</span>
         </p>   
         <p>Output on Mobilenet Model - 
-            <span></span>
+            <span>Comic Book</span>
         </p>
-        </ol>
+        <br><br>
+        <p>Google Lens wins!</p>
+        </ul>
         <br>
         <br>
-        <ol id="pen_evaluation">
+        <ul id="pen_evaluation">
             <li>
                 <b>Test Image- </b>
                 <img src="Pen.jpg" height="350"  alt="">
             </li>
             <p>
                 Output on Google Lens - 
-                <span></span>
+                <span>Mechanic Pen</span>
             </p>   
             <p>Output on Mobilenet Model - 
-                <span></span>
+                <span>Microphone</span>
             </p>
-        </ol>
+            <br><br>
+        <p>Google Lens wins!</p>
+        </ul>
         <br>
         <br>
-        <ol id="ruler_evaluation">
+        <ul id="ruler_evaluation">
             <li>
                 <b>Test Image- </b>
                 <img src="Ruler.jpg" height="350"  alt="">
             </li>
             <p>
                 Output on Google Lens - 
-                <span></span>
+                <span>Ruler</span>
             </p>   
             <p>Output on Mobilenet Model - 
-                <span></span>
+                <span>Ruler</span>
             </p>
-        </ol>
+            <br><br>
+        <p>It's a draw!</p>
+        </ul>
         <br>
         <br>
-        <ol id="saltshake_evaluation">
+        <ul id="saltshake_evaluation">
             <li>
                 <b>Test Image- </b>
                 <img src="salt_shaker.jpg" height="350"  alt="">
             </li>
             <p>
                 Output on Google Lens - 
-                <span></span>
+                <span>SAXA Saltshaker</span>
             </p>   
             <p>Output on Mobilenet Model - 
-                <span></span>
+                <span>Lotion</span>
             </p>
-        </ol>
+            <br><br>
+        <p>Google Lens wins!</p>
+        </ul>
         <br>
         <br>
-        <ol id="wb_evaluation">
+        <ul id="wb_evaluation">
             <li>
                 <b>Test Image- </b>
                 <img src="Water_bottle.jpg" height="350"  alt="">
             </li>
             <p>
                 Output on Google Lens - 
-                <span></span>
+                <span>HIGHLAND Sping Water Bottle</span>
             </p>   
             <p>Output on Mobilenet Model - 
-                <span></span>
+                <span>Water Bottle</span>
             </p>
-        </ol>
+            <br><br>
+        <p>It's a draw....?</p>
+        </ul>
 <br><br><br><br>
-<span></span>
+<span id="Ult_eval">The research above shows that Google Lens is hereby better than Mobilenet.</span>
+<br><br>
         <div id="footer">Made by- Abdulkareem Oyekunle</div>
     </body>
 </html>
